templates/ibm-sccm_template.yaml
---
# Source: ibm-sccm/templates/network-policy-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-ibm-sccm-default-deny-all
  labels:
    app.kubernetes.io/name: ibm-sccm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ibm-sccm-3.1.2
    release: release-name
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ibm-sccm
      app.kubernetes.io/instance: release-name
  policyTypes:
  - Ingress
  - Egress
---
# Source: ibm-sccm/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-ibm-sccm
  labels:
    app.kubernetes.io/name: ibm-sccm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ibm-sccm-3.1.2
    release: release-name
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ibm-sccm
      app.kubernetes.io/instance: release-name
  ingress:
    - from:
      ports:
        - protocol: TCP
          port: 58080
        - protocol: TCP
          port: 58082
        - protocol: TCP
          port: 58081
        - protocol: TCP
          port: 58083
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
---
# Source: ibm-sccm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-ibm-sccm
  labels:
    app.kubernetes.io/name: ibm-sccm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ibm-sccm-3.1.2
    release: release-name
    author: IBM
spec:
  selector:
    app.kubernetes.io/name: ibm-sccm
    app.kubernetes.io/instance: release-name
    release: release-name
    author: IBM
  type: LoadBalancer 
  ports:
  - name: swing-console
    port: 58080
    targetPort: 58080
    protocol: TCP
  - name: web-console
    port: 58082
    targetPort: 58082
    protocol: TCP
  - name: web-console-secure
    port: 58083
    targetPort: 58083
    protocol: TCP
  - name: swing-console-secure
    port: 58081
    targetPort: 58081
    protocol: TCP
  sessionAffinity: ClientIP
---
# Source: ibm-sccm/templates/statefulset.yaml
#Deployment
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-ibm-sccm
  labels:
    app.kubernetes.io/name: ibm-sccm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ibm-sccm-3.1.2
    release: release-name
    author: IBM
spec:
  replicas: 1
  selector: 
    matchLabels:
      app.kubernetes.io/name: ibm-sccm
      app.kubernetes.io/instance: release-name
      author: IBM
  serviceName: release-name-ibm-sccm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ibm-sccm
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        helm.sh/chart: ibm-sccm-3.1.2
        release: release-name
        author: IBM
      
      annotations:
        rollme: "Nc2KJ"        
        productID: "6827a92f0c4447ad8685d9ef4107c949"
        productName: "IBM Control Center Monitor Non-Prod Certified Container"
        productVersion: "v6.3"
        productMetric: "VIRTUAL_PROCESSOR_CORE"
        productChargedContainers: "All"
  
    spec:
      serviceAccountName: release-name-ibm-sccm-serviceaccount
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
              
        fsGroup: 65534
        runAsGroup: 0
        runAsNonRoot: true
        runAsUser: 1010
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
        - 65534
      affinity:        
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:      
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
          preferredDuringSchedulingIgnoredDuringExecution:        
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          preferredDuringSchedulingIgnoredDuringExecution:        
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          preferredDuringSchedulingIgnoredDuringExecution:
      containers:
        - name: release-name-ibm-sccm
          image: "cp.icr.io/cp/ibm-scc/ibmscc@sha256:e25fa783f8659271007a46246ed2a1d2ea592eb100c4cae8d2f92e4b5ba5ca68"
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "/app/ccEntrypoint.sh preStop  > /proc/1/fd/1"]
          volumeMounts:
            - mountPath: /app/CC/log/
              name: cc-volume
              subPathExpr: $(ENGINE_NAME)/logs
            - mountPath: /app/CC/conf/
              name: cc-volume
              subPathExpr: $(ENGINE_NAME)/conf
            - mountPath: /app/CC/conf-exported
              name: cc-volume
              subPathExpr: $(ENGINE_NAME)/conf-exported
            - mountPath: /app/CC/web/ccbase
              name: cc-volume
              subPathExpr: $(ENGINE_NAME)/ccbase
            - mountPath: /app/CC/packages/
              name: cc-volume
              subPathExpr: packages
            - mountPath: /app/CC/web/ccbase/reports
              name: cc-volume
              subPathExpr: reports
            - mountPath: /app/CC/user_inputs/
              name: cc-volume-user-inputs
              subPathExpr: user_inputs
            - mountPath: /app/cc_config_file
              name: scc-param
              subPath: scc_param_file
          securityContext:
                      
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsUser: 1010
          # Set liveness probe to determine if Control Center is running
          #seLinuxOptions:
            #level: s0:c0
          livenessProbe:
            initialDelaySeconds: 175
            periodSeconds: 120
            timeoutSeconds: 45
            failureThreshold: 10
            #tcpSocket:
            #  port: 58083
            exec:              
              command: 
              - bash
              - -c
              - /app/ccEntrypoint.sh monitor 58083
          # Set readiness probe to determine if Control Center is running
          readinessProbe:
            initialDelaySeconds: 175
            periodSeconds: 120
            timeoutSeconds: 15
            failureThreshold: 10
            #tcpSocket:              
            #  port: 58083
            exec:              
              command: 
              - bash
              - -c
              - /app/ccEntrypoint.sh monitor 58083
          startupProbe:
            exec:
              command:
              - bash
              - -c
              - /app/ccEntrypoint.sh monitor 58083
            periodSeconds: 120     
            failureThreshold: 10
          resources:
            limits:
              cpu: 3000m
              ephemeral-storage: 4Gi
              memory: 8Gi
            requests:
              cpu: 1500m
              ephemeral-storage: 2Gi
              memory: 4Gi
      volumes:
      - name: cc-volume
        persistentVolumeClaim:
          claimName: release-name-ibm-sccm-pvc-ccm
      - name: cc-volume-user-inputs
        persistentVolumeClaim:
          claimName: release-name-ibm-sccm-pvc-ui
      - name: scc-param
        configMap:
          name: release-name-ibm-sccm
      - name: scc-secret
        secret:
          secretName:
---
# Source: ibm-sccm/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: release-name-ibm-sccm-test
  annotations:
    "helm.sh/hook": test-success
    "helm.sh/hook-delete-policy": hook-succeeded
#    
    productID: "6827a92f0c4447ad8685d9ef4107c949"
    productName: "IBM Control Center Monitor Non-Prod Certified Container"
    productVersion: "v6.3"
    productMetric: "VIRTUAL_PROCESSOR_CORE"
  labels:
    app.kubernetes.io/name: ibm-sccm-test
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: ibm-sccm-3.1.2
    release: release-name
spec:
  restartPolicy: Never
  serviceAccountName: release-name-ibm-sccm-serviceaccount
  hostNetwork: false
  hostPID: false
  hostIPC: false
  securityContext:
      
    fsGroup: 65534
    runAsGroup: 0
    runAsNonRoot: true
    runAsUser: 1010
    seccompProfile:
      type: RuntimeDefault
    supplementalGroups:
    - 65534
  affinity:        
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:      
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
          preferredDuringSchedulingIgnoredDuringExecution:
  containers:
    - name: ibm-sccm
      image: "cp.icr.io/cp/ibm-scc/ibmscc@sha256:e25fa783f8659271007a46246ed2a1d2ea592eb100c4cae8d2f92e4b5ba5ca68"
      imagePullPolicy: IfNotPresent
      securityContext:
              
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        privileged: false
        readOnlyRootFilesystem: false
        runAsUser: 1010
      command: ["/bin/sh", "-c", "ret=`cat /app/CC/log/CCStartup.log | grep 'Web Server has been started!'` ; if [[ -n $ret ]]; then echo 'IBM SCC installation is successful and IBM Control Center Monitor application is running!' ; else echo 'IBM SCC application is not running!' ; fi"]
      resources:
        limits:
          cpu: 3000m
          memory: 8Gi
        requests:
          cpu: 1500m
          memory: 4Gi
      volumeMounts:
        - mountPath: /app/CC/log/
          name: cc-volume
          subPathExpr: $(ENGINE_NAME)/logs
  imagePullSecrets:
    - name: ibm-entitlement-key
  volumes:
      - name: cc-volume
        persistentVolumeClaim:
          claimName: release-name-ibm-sccm-pvc-ccm
